tests/enum_from/compile_fail/field/mixing_source_variant_kind.stderr
error: Unexpected mapping to named field while another field mapped to a positional field.
  --> tests/enum_from/compile_fail/field/mixing_source_variant_kind.rs:14:35
   |
14 |         #[enum_from(Source::Tuple.b)]
   |                                   ^
